Further correcting overflow issues on forms page & effect on blog page

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -11,13 +11,14 @@ header {
 }
 
 body {
-  height: 100%;
+
 }
 
 main {
   display: grid;
   grid-template-columns: 60% 30% 10%;
   justify-content: center;
+  overflow: auto; /* This prevents the blog page from stretching to fit additional content */
 }
 
 /* Class Selectors */
