--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,20 +12,12 @@ header {
 }
 
 html {
-  /* display: grid; */
-  /* grid-template-rows: auto 1fr auto; */
   height: 100%;
   box-sizing: border-box;
 }
 
-header {
-  background-color: var(--color-teal);
-  height: 30px;
-  grid-area: header;
-}
-
 body {
-  min-height: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-areas: 
@@ -37,9 +29,14 @@ body {
   background-size: cover;
 }
 
+header {
+  background-color: var(--color-teal);
+  height: 30px;
+  grid-area: header;
+}
+
 main {
   grid-area: main;
-  overflow: auto;
 }
 
 footer {
